--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "redis": "^5.10.0",
     "youtube-transcript-plus": "^1.1.2"
   }
 }
